segundos icones sendo terminados

--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/atla.css">
     <link rel="stylesheet" href="./css/icones-atla.css">
     <link rel="stylesheet" href="./css/mapa.css">
+    <link rel="stylesheet" href="./css/atlok.css">
+    <link rel="stylesheet" href="./css/icones-atlok.css">
     <title>Avatar - A Lenda</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Permanent+Marker&family=Sarala:wght@400;700&display=swap"
@@ -75,7 +77,8 @@
                     com medo da responsabilidade acabou fugindo e de alguma forma se congelando por 100 anos, até ser
                     encontrado por Sokka e Katara durante o ataque da Nação do Fogo.</h3>
             </div>
-            <p class="instrucao">Coloque o mouse sobre algum dos ícones para conhecer os personagens</p>
+            <p class="instrucao">Clique sobre algum dos ícones para conhecer os personagens, clique em algum outro lugar
+                para voltar.</p>
             <div class="icones">
                 <div class="esquerdo">
                     <a href="#a" type="" class="aangIcone">
@@ -83,7 +86,8 @@
                             <img src="./images/aangAtla.png" alt="" class="aang_foto">
                             <div class="aangInfo">
                                 <h1 id="title" class="nomeAang">Aang</h1>
-                                <p id="desc" class="descAang">Aang é um jovem brincalhão de 112 anos, o último da cultura dos
+                                <p id="desc" class="descAang">Aang é um jovem brincalhão de 112 anos, o último da
+                                    cultura dos
                                     Monges do Ar. Descobriu que era o avatar durante a infância antes de realmente
                                     anunciarem, se assustando com a responsabilidade de ser a pessoa que defenderia o
                                     mundo e um grande poder político e fugindo de sua casa. Acabou por cair no mar e se
@@ -94,32 +98,221 @@
                                     Appa e agora precisando fazer seu dever como Avatar para impedir que a Nação do Fogo
                                     dominasse todas as outras nações do mundo.</p>
                             </div>
-                            <div class="info2">
+                            <div class="aangInfo2">
                                 <div class="elemento">
                                     <div class="avatarElemento">
                                         <img src="./images/avatar-elemento.png" alt="">
                                     </div>
                                     <p class="elementoNome">avatar</p>
                                 </div>
-                                <img src="./images/inicio.gif" alt="" class="aangGif">
+                                <img src="./images/inicio.gif" alt="" class="gif">
                             </div>
                         </div>
                     </a>
                     <a href="#a" type="" class="kataraSokkaIcone">
-                        <div class="katara-sokka"></div>
+                        <div class="katara-sokka">
+                            <img src="./images/sokkaKatara1.png" alt="" class="sokkaKatara_photo">
+                            <img src="./images/sokkaKatara2.png" alt="" class="sokkaKatara_photo2">
+                            <div class="irmaosInfo">
+                                <h1 id="title" class="nomeIrmaos">Sokka e Katara</h1>
+                                <p id="desc" class="descIrmaos">Sokka e Katara são irmãos orfãos que tiveram seus pais
+                                    mortos por um ataque da Nação do fogo.
+                                    Katara é dominadora de água, mas Sokka não nasceu com tal habilidade. Os dois vivem
+                                    sozinhos na Tribo da Água cuidando um do outro, principalmente Sokka que se ente
+                                    responsável em cuidar de sua irmã.
+
+                                    Ao encontrar Aang congelado, os dois se juntaram a ele para que pudessem o ajudar a
+                                    enfrentar a grande Nação do Fogo.</p>
+                            </div>
+                            <div class="irmaosInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/elementoAguaSemElemento.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">água e sem dobra</p>
+                                </div>
+                                <img src="./images/encontro.gif" alt="" class="gif">
+                            </div>
+                        </div>
                     </a>
                 </div>
                 <div class="direito">
                     <a href="#a" type="" class="tophIcone">
-                        <div class="toph"></div>
+                        <div class="toph">
+                            <div class="tophInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/elementoTerra.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">terra</p>
+                                </div>
+                                <img src="./images/luta.gif" alt="" class="gif">
+                            </div>
+                            <div class="tophInfo">
+                                <h1 id="title" class="nomeToph">Toph</h1>
+                                <p id="desc" class="descToph">Toph é uma garota cega, filha da rica família Beifong e
+                                    moradora da Nação da Terra. Por causa de sua deficiência, seus pais agem como super
+                                    protetores, a sufocando sem saber ao não deixá-la fazer praticamente nada com medo
+                                    de Toph se machucar.
+
+                                    Quando criança, acabou por fugir certas vezes de casa para brincar sozinha, uma vez
+                                    se perdendo e se encontrando com as Toupeiras Texugo, animais que a ensinaram a
+                                    dominar a terra com maestria, se tornando a melhor lutadora em uma arena clandestina
+                                    sem nem mesmo seus pais saberem.
+                                    Se junta a Aang após convencerem seus pais a deixá-la viver.</p>
+                            </div>
+                            <img src="./images/toph.png" alt="" class="toph_photo">
+                        </div>
                     </a>
                     <a href="#a" type="" class="zukoIcone">
-                        <div class="zuko"></div>
+                        <div class="zuko">
+                            <div class="zukoInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/elementoFogo.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">fogo</p>
+                                </div>
+                                <img src="./images/agnikai.gif" alt="" class="gif">
+                            </div>
+                            <div class="zukoInfo">
+                                <h1 id="title" class="nomeZuko">Zuko</h1>
+                                <p id="desc" class="descZuko">Zuko foi expulso de sua casa após desonrar seu pai, sendo
+                                    desafiado pelo próprio em um “Agni kai” - um duelo entre dobradores de fogo - pelo
+                                    próprio como castigo e tendo seu rosto queimado.
+
+                                    Se obcecou pela ideia de capturar o Avatar para entregá-lo à Nação do Fogo e
+                                    recuperar sua honra com o Senhor do Fogo Ozai, seu pai.
+
+                                    Acabou se aliando a Aang com o decorrer do desenho ao refletir sobre seu objetivo.
+                                </p>
+                            </div>
+                            <img src="./images/zuko.png" alt="" class="zuko_photo">
+                        </div>
                     </a>
                 </div>
             </div>
         </section>
-        <section id="atlok_Personagens"></section>
+        <section id="atlok_Personagens">
+            <div class="introducao">
+                <img src="./images/atlokLogo.png" alt="" class="atlok_logo">
+                <h3 class="descricao_Atlok">Conta sobre Korra, que após se empolgar com a notícia de ser o Avatar,
+                    viajou
+                    para a Cidade República com os filhos do antigo Aang para aprender a dominar os elementos e aprender
+                    sua responsabilidade como Avatar.</h3>
+            </div>
+            <p class="instrucao">Clique sobre algum dos ícones para conhecer os personagens, clique em algum outro lugar
+                para voltar.</p>
+            <div class="icones">
+                <div class="esquerdo">
+                    <a href="#a" type="" class="korraIcone">
+                        <div class="korra">
+                            <img src="./images/korraAtlok.png" alt="" class="korra_photo">
+                            <div class="korraInfo">
+                                <h1 id="title" class="nomeKorra">Korra</h1>
+                                <p id="desc" class="descKorra">Korra, com poucos anos de seu nascimento descobriu por si
+                                    só o poder de manipular todos os quatro elementos da natureza, se empolgando com a
+                                    ideia de ser o Avatar. Logo quando criança, foi levada para treinar os elementos que
+                                    tinha facilidade, Água, Fogo e Terra, masterizando todos com extrema facilidade, mas
+                                    tendo dificuldade com a dobra de Ar. Com isso, Tenzin, filho do falecido Aang,
+                                    último Avatar, sugeriu para que pudesse levá-la à ilha dos monges de ar próxima a
+                                    Cidade República para que pudesse a ajudá-la a dominar o ar.
+
+                                    Então, nessa mesma cidade, Korra descobriu amigos e inimigos, agora tendo que lidar
+                                    com a enorme responsabilidade de ser o Avatar que ela não esperava.
+                                </p>
+                            </div>
+                            <div class="korraInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/avatar-elemento.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">avatar</p>
+                                </div>
+                                <img src="./images/treino.gif" alt="" class="gif">
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#a" type="" class="asamiIcone">
+                        <div class="asami">
+                            <img src="./images/Asami.png" alt="" class="asami_photo">
+                            <div class="asamiInfo">
+                                <h1 id="title" class="nomeAsami">Asami</h1>
+                                <p id="desc" class="descAsami">Filha de Hiroshi Sato, vinda de família rica, se
+                                    aventura na Cidade República enquanto ajuda seu pai a admnistrar sua empresa de
+                                    tecnologia.
+
+                                    Acabou se envolvendo sem querer com o Avatar e seu grupo, mas se provou ser uma
+                                    aliada habilidosa após ajudar a derrotar Amon, o primeiro vilão que Korra enfrenta
+                                    durante o desenho. </p>
+                            </div>
+                            <div class="asamiInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/semDobra.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">sem dobra</p>
+                                </div>
+                                <img src="./images/confronto.gif" alt="" class="gif">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="direito">
+                    <a href="#a" type="" class="bolinIcone">
+                        <div class="bolin">
+                            <div class="bolinInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/elementoTerra.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">terra</p>
+                                </div>
+                                <img src="./images/pabu.gif" alt="" class="gif">
+                            </div>
+                            <div class="bolinInfo">
+                                <h1 id="title" class="nomeBolin">Bolin</h1>
+                                <p id="desc" class="descBolin">Um jogador de dominação profissional, faz time com seu
+                                    irmão Mako e realmente gosta de ser famoso por ser um dos se não o melhor time da
+                                    Cidade República.
+
+                                    Acabou encontrando Korra perdida na arena de dobra profissional e a ajudou a
+                                    conhecer a cidade, até mesmo a deixando substituir um membro que havia acabado de
+                                    sair do time para a próxima roda. Durante a partida descobriu que Korra era o Avatar
+                                    e acabaram ficando bem mais próximos após se envolverem com Amon.</p>
+                            </div>
+                            <img src="./images/bolin.png" alt="" class="bolin_photo">
+                        </div>
+                    </a>
+                    <a href="#a" type="" class="zukoIcone">
+                        <div class="zuko">
+                            <div class="zukoInfo2">
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/elementoFogo.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">fogo</p>
+                                </div>
+                                <img src="./images/agnikai.gif" alt="" class="gif">
+                            </div>
+                            <div class="zukoInfo">
+                                <h1 id="title" class="nomeZuko">Zuko</h1>
+                                <p id="desc" class="descZuko">Zuko foi expulso de sua casa após desonrar seu pai, sendo
+                                    desafiado pelo próprio em um “Agni kai” - um duelo entre dobradores de fogo - pelo
+                                    próprio como castigo e tendo seu rosto queimado.
+
+                                    Se obcecou pela ideia de capturar o Avatar para entregá-lo à Nação do Fogo e
+                                    recuperar sua honra com o Senhor do Fogo Ozai, seu pai.
+
+                                    Acabou se aliando a Aang com o decorrer do desenho ao refletir sobre seu objetivo.
+                                </p>
+                            </div>
+                            <img src="./images/zuko.png" alt="" class="zuko_photo">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section id="nacoes">
             <img class="mapa" src="./images/Map.jpg" alt="">
             <div class="instrucoes">
