--- a/ds1t-a/one-page-doceria/index.html
+++ b/ds1t-a/one-page-doceria/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <div class="logo-doceria">
+        <div class="logo_doceria">
             <img class="logo" src="img/Logo.png" alt="">
         </div>
         <nav>
@@ -41,30 +41,110 @@
     </header>
     <main>
         <section class="home" id="home">
-            <h1 class="titulo-home">
+            <h1 class="titulo_home">
                 Gulart’s a doceria com muitas Gulas feitas de Arte
             </h1>
         </section>
-        <section class="menu-cardapio" id="menu-cardapio">
+        <section class="menu_cardapio" id="menu_cardapio">
             <h1 class="titulo">
                 NataLandia
             </h1>
+        <div class="cardapio_box">
             
-            <div class="frangao">
-                <div class="item-cardapio-frango">
-                <div class="img-frango">
+            <div class="item_cardapio_frango">
+                <div class="img_itens">
                     <img src="img/image 14.png" alt="">
                 </div>
-                <p class="titulo-frango">
+                <p class="titulo_itens">
                     Frango Assado</p>
-                <div class="preco-add">
+                <div class="preco_add">
                 <p class="preco">
                     Preço <span class="valor">R$60,00</span></p>
                 <a href="#" class="add">
                     Add +</a>
                 </div>
             </div>
+
+            <div class="rabanadao">
+                <div class="item_cardapio_rabanada">
+                    <div class="img_itens">
+                        <img src="img/image 13.png" alt="">
+                    </div>
+                    <p class="titulo_itens">
+                        Rabanada</p>
+                    <div class="preco_add">
+                    <p class="preco">
+                        Preço <span class="valor">R$5,00</span></p>
+                    <a href="#" class="add">
+                    Add +</a>
+                </div>
+                </div>
             </div>
+
+            <div class="pave">
+                <div class="item_cardapio_pave">
+                    <div class="img_itens">
+                        <img src="img/image 15.png" alt="">
+                    </div>
+                    <p class="titulo_itens">
+                        Pave de Chocolate</p>
+                    <div class="preco_add">
+                    <p class="preco">
+                        Preço <span class="valor">R$80,00</span></p>
+                    <a href="#" class="add">
+                    Add +</a>
+                </div>
+                </div>
+            </div>
+
+            <div class="salpicao">
+                <div class="item_cardapio_salpicao">
+                    <div class="img_itens">
+                        <img src="img/image 19.png" alt="">
+                    </div>
+                    <p class="titulo_itens">
+                        Salpicão</p>
+                    <div class="preco_add">
+                    <p class="preco">
+                        Preço <span class="valor">R$34,98</span></p>
+                    <a href="#" class="add">
+                    Add +</a>
+                </div>
+                </div>
+            </div>
+
+            <div class="arroz">
+                <div class="item_cardapio_arroz">
+                    <div class="img_itens">
+                        <img src="img/th.jfif" alt="">
+                    </div>
+                    <p class="titulo_itens">
+                        Arroz</p>
+                    <div class="preco_add">
+                    <p class="preco">
+                        Preço <span class="valor">R$12,99</span></p>
+                    <a href="#" class="add">
+                    Add +</a>
+                </div>
+                </div>
+            </div>
+
+            <div class="maionese">
+                <div class="item_cardapio_maionese">
+                    <div class="img_itens">
+                        <img src="img/Capturar 1.png" alt="">
+                    </div>
+                    <p class="titulo_itens">
+                        Maionese</p>
+                    <div class="preco_add">
+                    <p class="preco">
+                        Preço <span class="valor">R$12,50</span></p>
+                    <a href="#" class="add">
+                    Add +</a>
+                </div>
+                </div>
+            </div>
+        </div>
         </section>
         <section class="about-us" id="about"></section>
         <section class="contato" id="contato"></section>
