--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -54,6 +54,9 @@
                     <a href="#contato">Contato</a>
                 </li>
             </ul>
+            <div class="bars">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
     </header>
     <main>   
