--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/textoEImage.css">
     <link rel="stylesheet" href="./css/bo3.css">
     <link rel="stylesheet" href="./css/termos.css">
+    <link rel="stylesheet" href="./css/formas.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -78,15 +79,15 @@
                     </div>
                     <div id="linha-horizontal2"></div>    
                     <div class="quadrado1"> 
-                    <span>
-                        Call of Duty: Black Ops
-                        1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. 
-                        A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. 
-                        É aqui que conhecemos pela primeira vez o agente 
-                        lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. 
-                        É o primeiro jogo a incluir o modo de zombies.
-                    </span>
-                    <div class="quadrado">SAIBA MAIS</div>
+                        <span>
+                            Call of Duty: Black Ops
+                            1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. 
+                            A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. 
+                            É aqui que conhecemos pela primeira vez o agente 
+                            lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. 
+                            É o primeiro jogo a incluir o modo de zombies.
+                        </span>
+                        <div class="quadrado">SAIBA MAIS</div>
                     </div>
                 </div>
         </section>
@@ -94,36 +95,45 @@
             <div class="textoEImage">
                 <div class="imagensBo2">
                     <a href="https://www.callofduty.com/blackops2" target="_blank">
-                    <img src="./img/cod-bo2-logo 1.png" alt="logoBo2" class="logo_bo2">
-                    <img src="./img/bo2_Img 1.png" alt="imgbo2" class="img_bo2">
+                        <img src="./img/cod-bo2-logo 1.png" alt="logoBo2" class="logo_bo2">
+                    </a>
+                    <div class="imgBo2">
+                        <div class="textQuadrado">
+                            <span>
+                                Call of Duty: Black Ops 2 é um jogo, para PS3, Xbox 360, PC e Wii U que marcou o retorno da maior franquia de tiro. O jogo apresenta uma grande novidade em relação aos títulos anteriores: um tom futurista para sua jogabilidade e 
+                                história.
+                                O jogador deve travar um combater entre humanos e robôs. 
+                                 Um dos grandes destaques do game é o seu modo online, que permite batalha épicas contra outros jogadores. 
+                                pesar de trazer elementos futuristas, a série não abandona suas raízes e oferece uma narrativa com uma história 
+                                paralela que se passa nos anos 1970-80, em meio à Guerra Fria.
+                            </span>
+                            <div class="quadrado2">SAIBA MAIS</div>
+                        </div>
+                        <div id="linha-horizontal222"></div>
+                        <img src="./img/bo2_Img 1.png" alt="imgebo2">                        
+                    </div>
                 </div>
-                <!-- <span>
-                    Call of Duty: Black Ops 2 é um jogo, para PS3, Xbox 360, PC e Wii U que marcou o retorno da maior franquia de tiro. O jogo apresenta uma grande novidade em relação aos títulos anteriores: um tom futurista para sua jogabilidade e 
-                    história.
-                     O jogador deve travar um combater entre humanos e robôs. 
-                     Um dos grandes destaques do game é o seu modo online, que permite batalha épicas contra outros jogadores. 
-                    pesar de trazer elementos futuristas, a série não abandona suas raízes e oferece uma narrativa com uma história 
-                    paralela que se passa nos anos 1970-80, em meio à Guerra Fria.
-                </span> -->
             </div>
         </section>
         <section class="bo3" id="bo3">
             <div class="textImg">
                 <div class="imagensBo1EBo2">
-                    <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
+                    <a href="https://www.callofduty.com/blackops3" target="_blank">
+                        <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
+                    </a>
                     <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo1" class="img_bo3">
                 </div>
                 <div id="linha-horizontal22"></div>    
                 <div class="quadrado1"> 
-                <span>
-                    Call Of Duty: Black Ops 3 foi
-                    desenvolvido pela Treyarch. Lançado para Xbox One, PS4, Xbox 360, PlayStation 3 e PC
-                    , o jogo dá continuidade à longa tradição da franquia em multiplayer online, e também revitaliza o modo campanha com algumas novidades. 
-                    Ambientado em 2065, o enredo destaca os eventos e combates do esquadrão Black Ops, e aposta nas tradicionais passagens cinematográficas 
-                    que fizeram a fama da 
-                    franquia desde as primeiras versões.
-                </span>
-                <div class="quadrado">SAIBA MAIS</div>
+                    <span>
+                        Call Of Duty: Black Ops 3 foi
+                        desenvolvido pela Treyarch. Lançado para Xbox One, PS4, Xbox 360, PlayStation 3 e PC
+                        , o jogo dá continuidade à longa tradição da franquia em multiplayer online, e também revitaliza o modo campanha com algumas novidades. 
+                        Ambientado em 2065, o enredo destaca os eventos e combates do esquadrão Black Ops, e aposta nas tradicionais passagens cinematográficas 
+                        que fizeram a fama da 
+                        franquia desde as primeiras versões.
+                    </span>
+                    <div class="quadrado">SAIBA MAIS</div>
                 </div>
             </div>
         </section>
