--- a/ds1m-b/stephany/index.html
+++ b/ds1m-b/stephany/index.html
@@ -1,39 +1,116 @@
 <!DOCTYPE html>
 <html lang="BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>Campo De Concentração</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/home.css">
-    <link  rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/experimentos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-   
+
+
 </head>
+
 <body>
 
     <header>
         <img src="./img/menu.png" alt="">
-        <div class="menu">
-            <li>O que é</li>
-            <li>Joseph Menguele</li>
-            <li>Experimentos</li>
-        </div>
 
+        <div>
+            <nav>
+                <ul class="menu">
+                <li>
+                    <a href="#o que foi">O que foi</a>
+                </li>
+                <li>
+                    <a href="#joseph menguele">Joseph Menguele</a>
+                </li>
+                <li>
+                    <a href="#experimentos">Experimentos</a>
+                </li>
+                </ul>
+            </nav>
     </header>
 
     <main>
-        <section  id="home" class="home" ></section>
+        <section id="home" class="home"></section>
         <section id="o que foi" class="o-que-foi">
-            <h1> Auschwitz o que foi</h1>
-            <p>O campo de concentração e extermínio de Auschwitz foi o maior acampamento de prisioneiros da Alemanha nazista e o maior centro construído para matar pessoas em toda a história da humanidade.</p>
-            <p>O campo de concentração foi instalado próximo à cidade de Oswiecim, na Polônia, a cerca de 60 quilômetros da capital Cracóvia. Muito rápido, tornou-se o maior centro de concentração e extermínio de pessoas na Segunda Guerra Mundial.</p>
+            <div class="textos">
+                <h1> Auschwitz o que foi</h1>
+                <p>O campo de concentração e extermínio de Auschwitz foi o maior acampamento de prisioneiros da Alemanha
+                    nazista e o maior centro construído para matar pessoas em toda a história da humanidade.</p>
+                <p>O campo de concentração foi instalado próximo à cidade de Oswiecim, na Polônia, a cerca de 60
+                    quilômetros da capital Cracóvia. Muito rápido, tornou-se o maior centro de concentração e extermínio
+                    de pessoas na Segunda Guerra Mundial.</p>
+            </div>
+            <div class="imagens-header">
+                <img class="imagem" src="./img/Rectangle 4.png" alt="">
+                <img class="imagem2" src="./img/Rectangle 3 (1).png"></div>
+
         </section>
+        <section id="Joseph Menguele" class="Joseph Menguele"></section>
+        <section id="joseph menguele" class="o-que-foi">
+            <div class="textos">
+                <div class="joseph">
+                    <h1> Joseph Menguele</h1>
+                    <p>Começou sua jornada como soldado,mas acabou ferido começando enfim, sua vida profissional na
+                        medicina.Fazendo experimentos ou melhor dizendo torturas.Conhecido como “Anjo da Morte”foi
+                        trasferido e nomeado como chefe do campo de Extermínio de Auschwitz na Polônia.</p>
+                    <p> Joseph faleceu no Brasil em 1979 de ataque cardíaco enquanto nadava.</p>
+                </div>
+            </div>
+            <div class="imagens-import">
+                <img class="joseph" src="./img/Joseph Manguela.png"> </div>
+        </section>
+
+        <section id="Experimentos" class="Experimentos"></section>
+            <section id="experimentos" class="como-foi">
+                <h1 class="title"> Experimentos</h1>
+                <div class="experimentos">                  
+                   <div class="cig_olho">
+                    <div class="img_txt">
+                        <img src="./img/Cigano.png" alt="Cigano sendo forçado a participar de um experimento, que consistia em igerir água do mar.">
+                        <p>Ciganos que eram obrigados a ingeris água do mar,para saber se soldados eram capazes de
+                            sobreviver no mar.</p>
+                    </div>
+                    <div class="img_txt">
+                        <img src="./img/Olhos.png" alt="Pessoas com outra cor de olhos tinham eles arrancados para experimentos.">
+                        <p>Arrancavam os olhos de pessoas caso eles tivessem outro tipo de cor,para poder colocar
+                            pigmentos para saber se mudava ou não a tonalidade. </p>
+                    </div>
+                   </div>
+                    <div class="gemeos">
+                        <div class="img_txt">
+                            <img src="./img/Gemeos.png" alt="Gemeos colados um no outro para determinar as reaçoes.">
+                            <p>Os gêmeos colados um no outro para serem um só;Quais seriam as reações deles,se umdeles morresse o que aconteceria com o outro.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+        
+
+
+
     </main>
 
-    <footer>Footer</Footer>
-
+    <footer>
+        <p>Todos os direitos reservados 2022 / Desenvolvido por Stephany Ribeiro Da Silva.</p>
+    </Footer>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
 </body>
+
 </html>
-
-
