--- a/ds1m-a/claramartins/index.html
+++ b/ds1m-a/claramartins/index.html
@@ -163,20 +163,39 @@
                     <h2 class="members_title">PHOTOBOOK</h2>
                     <div class="slideshow-container">
                         <div class="mySlides-images fade">
-                            <img src="./img/jennie_pb.png" alt="Image Blackpink 1" />
+                            <img src="./img/jennie_pb_ta.jpg" alt="Image Blackpink 1" />
                         </div>
                         <div class="mySlides-images fade">
-                            <img src="./img/rose_pb.png" alt="Image Blackpink 2" />
+                            <img src="./img/rose_pb_ta.jpg" alt="Image Blackpink 2" />
                         </div>
                         <div class="mySlides-images fade">
-                            <img src="./img/lisa_pb.jpg" alt="Image Blackpink 3" />
+                            <img src="./img/lisa_pb_ta.jpg" alt="Image Blackpink 3" />
                         </div>
                         <div class="mySlides-images fade">
-                            <img src="./img/jisoo_pb.jpeg" alt="Image Blackpink 4" />
+                            <img src="./img/jisoo_pb_ta.jpg" alt="Image Blackpink 4" />
                         </div>
-                       
+                        <div class="mySlides-images fade">
+                            <img src="./img/blackpink_pb_ta.jpg" alt="Image Blackpink 5" />
+                        </div>
+                        <div class="mySlides-images fade">
+                            <img src="./img/jennie_pb_ta_2.jpg" alt="Image Blackpink 1" />
+                        </div>
+                        <div class="mySlides-images fade">
+                            <img src="./img/rose_pb_ta_2.jpg" alt="Image Blackpink 2" />
+                        </div>
+                        <div class="mySlides-images fade">
+                            <img src="./img/lisa_pb_ta_2.jpg" alt="Image Blackpink 3" />
+                        </div>
+                        <div class="mySlides-images fade">
+                            <img src="./img/jisoo_pb_ta_2.jpg" alt="Image Blackpink 4" />
+                        </div>
                     </div>
                     <div class="dots-images">
+                        <span class="dot-images"></span>
+                        <span class="dot-images"></span>
+                        <span class="dot-images"></span>
+                        <span class="dot-images"></span>
+                        <span class="dot-images"></span>
                         <span class="dot-images"></span>
                         <span class="dot-images"></span>
                         <span class="dot-images"></span>
@@ -189,7 +208,7 @@
     <footer>
         <div class="social">
             <div class="linha-horizontal_2"></div>
-            <img src="./img/logo.png" alt="logo">
+            <img class="logo" src="./img/logo.png" alt="logo">
             <div class="icons_social">
                 <a href="https://www.vlive.tv/channel/F001E5" target="_blank">
                     <img class="vlive" src="./img/v_live.png">
