--- a/ds1m-a/claramartins/index.html
+++ b/ds1m-a/claramartins/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./img/logo.png" alt="">
+            <img src="./img/logo.png" alt="logo blackpink">
         </div>
         <div>
             <nav>
@@ -101,15 +101,15 @@
                 <h4 class="section_title">Albums</h4>
                 <div class="slider">
                     <div class="album_e_nome">
-                        <img src="./img/born_pink.png" alt="">
+                        <img src="./img/born_pink.png" alt="album born pink">
                         <p class="nome_album">'Born Pink', 2022</p>
                     </div>
                     <div class="album_e_nome">
-                        <img src="./img/the_album.png" alt="">
+                        <img src="./img/the_album.png" alt="album the album">
                         <p class="nome_album">'The Album', 2021</p>
                     </div>
                     <div class="album_e_nome">
-                        <img src="./img/kill_this_love.png" alt="">
+                        <img src="./img/kill_this_love.png" alt="album kill this love">
                         <p class="nome_album">'Kill This Love', 2020</p>
                     </div>
                     <a href="https://www.letras.mus.br/blackpink/discografia/" target="_blank">
@@ -211,7 +211,7 @@
             <img class="logo" src="./img/logo.png" alt="logo">
             <div class="icons_social">
                 <a href="https://www.vlive.tv/channel/F001E5" target="_blank">
-                    <img class="vlive" src="./img/v_live.png">
+                    <img class="vlive" src="./img/v_live.png" alt="vlive icon">
                 </a>
                 <a href="https://www.instagram.com/BLACKPINKOFFICIAL/" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
