--- a/ds1m-a/Guilherme-Rufino/index.html
+++ b/ds1m-a/Guilherme-Rufino/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/frama4-responsive-tablet.css">
 </head>
 
+<div></div>
+
 <body>
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
